# API-de-Busca-de-Operadores

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
application/dto/: operator_model.py
application/exception/: business_exception.py  invalid_order_parameter_exception.py  invalid_search_parameter_exception.py
application/services/: operator_service.py
docs/: camelCase-convention.md  cors-configuration.md  docker-instructions.md  index.md
domain/model/: operator.py
infra/: config.py  db_manager.py  limiter_config.py  swagger_config.py
presentation/: main.py
presentation/api/: dependencies.py
presentation/exception/: api_error.py  api_error_type.py  exception_handlers.py
presentation/model/: operator_request_params.py  pageable_meta_model.py  pageable_response.py
src/: __init__.py
src/application/dto/: operator_model.py
src/application/exception/: business_exception.py  invalid_search_criteria_exception.py  invalid_sort_parameter_exception.py  rate_limit_exception.py  violation_exception.py
src/application/service/: operator_service.py
src/application/services/: operator_service.py
src/domain/model/: operator.py
src/domain/repository/: operator_repository.py
src/infra/config/: __init__.py  config.py  swagger_config.py
src/infra/database/: __init__.py  cache_key_manager.py
src/infra/middleware/: cors_middleware.py  middleware.py  rate_limit_middleware.py
src/presentation/: main.py
src/presentation/api/: routes.py
src/presentation/exception/: api_error.py  api_error_type.py  error_message_translator.py  exception_handlers.py
src/presentation/model/: operator_request_params.py  pageable_response.py
src/scripts/: run.py
tests/: conftest.py  test_api.py  test_api_errors.py  test_app_config.py  test_conformity.py  test_cors.py  test_exception_handlers.py  test_functional.py  test_fuzzing.py  test_integration.py  test_operator_service.py  test_performance.py  test_rate_limiting.py  test_regression.py  test_security.py  test_usability.py
