[project]
name = "intuitive-care"
version = "0.1.0"
description = "API de busca de operadoras de saúde"
authors = [
    {name = "Kleber Rhuan",email = "kleber_rhuan@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.0,<1.2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<2.1.0)",
    "aiocache (>=0.12.3,<0.13.0)",
    "pydantic (>=2.11.0,<2.12.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "pytest (>=8.3.5,<8.4.0)",
    "limits (>=4.4.1,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn src.presentation.main:application --reload"
test = "pytest"
lint = "flake8 src tests"
format = "black src tests"
sort = "isort src tests"
