[project]
name = "intuitive-care"
version = "0.1.0"
description = "API de busca de operadoras de saúde desenvolvida com FastAPI, oferecendo uma interface intuitiva e eficiente para consulta de informações sobre operadoras."
authors = [
    {name = "KleberRhuan",email = "kleber_rhuan@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "limits (>=4.4.1,<5.0.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiocache (>=0.12.3,<0.13.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
package-mode = true
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[tool.poetry.scripts]
start = "src.scripts.run:start"
test = "src.scripts.run:test"
format = "src.scripts.run:format"
sort = "src.scripts.run:sort"
lint = "src.scripts.run:lint"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

